--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,31 +21,78 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
+		font-family: ui-monospace, Menlo,  Monaco, Lucida Console, 'Courier New', Courier, monospace;
+		background-color: #000;
+		letter-spacing: -0.0 25rem;
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+
+	body,
+	figure {
+		padding: 0;
+		margin: 0;
+	}
+
+	a {
+		text-decoration: none;
+	}
+
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;  
+	} 
+
+	*, *::before, *::after {
+		box-sizing: border-box; 
+	}
+
+	h1, h2, h3, h4 {
+		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		margin: 0;
+		color: #fff;
+	}
+
+	h2 {
+		font-weight: 500;
+		font-size: 18px;
+	}
+
+	p {
+		color: #fafafa; 
+		font-size: 14px; 
+		margin: 0;
+		line-height: 1.5;
+		text-wrap: pretty;
+	}
+
+	span {
+		font-size: 14px;
+		margin: 0;
+	}
+
+	@media print {
+		.no-print {
+			display: none !important;
+		}
+		html {
+			background-color: #fff;
+		}
+		p {
+			color: #555;
+		}
+		h1, h2, h3, h4 {
+			color: #000;
+		}
+	}
+
+	.print {
+		display: none !important;
+	}
+
+	@media print {
+		.print{
+			display: block !important;
+		}
 	}
 </style>
