--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Portfolio of Facundo Meoni, Fullstack developer with 2 years of experience in web development. Discover my projects and technical skills" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image.webp" href="/facu-logo.webp" />
 		<meta name="generator" content={Astro.generator} />
