refactor: change cmd to ctrl in footer of keyboardManager

--- a/src/components/KeyboardManager.astro
+++ b/src/components/KeyboardManager.astro
@@ -1,5 +1,5 @@
  <footer class="no-print">
-    Press <kbd>Cmd</kbd> + <kbd>K</kbd> to open the command palette.
+    Press <kbd>Ctrl</kbd> + <kbd>K</kbd> to open the command palette.
  </footer>
 
  <ninja-keys class="light no-print">
