--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -84,6 +84,20 @@ const { title } = Astro.props;
 		h1, h2, h3, h4 {
 			color: #000;
 		}
+		/* Ocultar fecha y hora en la impresión */
+		@page {
+			margin: 0.5in;
+		}
+		/* Ocultar encabezados y pies de página del navegador */
+		@page :first {
+			margin-top: 0.5in;
+		}
+		@page :left {
+			margin-left: 0.5in;
+		}
+		@page :right {
+			margin-right: 0.5in;
+		}
 	}
 
 	.print {
@@ -93,6 +107,11 @@ const { title } = Astro.props;
 	@media print {
 		.print{
 			display: block !important;
+		}
+		/* Ocultar cualquier elemento de fecha/hora que el navegador pueda agregar */
+		body::before,
+		body::after {
+			display: none !important;
 		}
 	}
 </style>
