--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -21,12 +21,14 @@
               >{ name }</a> 
               { !isActive ? <span style="font-size: 14px;">- Archived </span> : null }
             </h3>
-            <a 
-              href={github}
-              target="_blank"
-              rel="noopener noreferrer"
-              title={`See project ${name} on Github`}
+            { github && (
+              <a 
+                href={github}
+                target="_blank"
+                rel="noopener noreferrer"
+                title={`See project ${name} on Github`}
               > <Github/> </a>
+            )}
           </header>
             <p> { description } </p>
           <footer>
